# elbird

./: .Rbuildignore  .Rprofile  .gitignore  .lintr  404.html  CRAN-SUBMISSION  DESCRIPTION  FINAL_TEST_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  README_kr.Rmd  README_kr.html  README_kr.md  _pkgdown.yml  authors.html  benchmark_performance.R  cleanup  configure  configure.ac  cran-comments.md  elbird.Rproj  index.html  pkgdown.yml  search.json  sitemap.xml  test.txt  test_integration.R  test_kiwi_update.R  test_package_structure.R  test_user_scenarios.R
.github/: FUNDING.yml
R/: .logo.R  Elbird-package.R  Kiwi.R  analyze.R  class.R  cpp11.R  dict.R  dictionary.R  el.R  elbird-package.R  expose.R  extract.R  init.R  joiner.R  kiwi-export.R  kiwi.R  kiwi_model.R  morphset.R  onLoad.R  pretokenized.R  split_into_sents.R  stopwords.R  swtokenizer.R  tokenize.R  types.R  user_dic.R  utils.R  version.R  wrapper.R  zzz.R
articles/: README_kr.html  extract-words.html  index.html  kiwi-class.html  stopwords.html
autom4te.cache/: output.0  requests  traces.0
data/: cond_vowel.rda  pos_tag.rda
data-raw/: types.R
man/: BuildOpt.Rd  Dialect.Rd  Elbird-package.Rd  Joiner.Rd  Kiwi.Rd  Kiwi_Class.Rd  Match.Rd  Morphset.Rd  Pretokenized.Rd  Stopwords.Rd  SwTokenizer.Rd  Tags.Rd  TypoSet.Rd  add_user_word.Rd  analyze.Rd  cond_vowel.Rd  elbird-package.Rd  enums.Rd  export_user_word_to_dictionary.Rd  extract_add_words.Rd  extract_filter_words.Rd  extract_words.Rd  get_model.Rd  init.Rd  kiwi_model_path.Rd  model_exists.Rd  (+10 more)
(+96 files in other folders)
